docs(swagger): corrige sintaxe dos schemas na documentacao e ajusta definicao das rotas
